feat(romm): enable HLTB

--- a/manifests/prod/romm/Deployment-romm.yaml
+++ b/manifests/prod/romm/Deployment-romm.yaml
@@ -31,7 +31,7 @@ spec:
         checksum/mongodb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
         checksum/persistence: 93f297b2dc801369910048359b61f369b9fa6ef724d690f7364d70cf9aeb0073
         checksum/redis: daad10611a917af094066e5d66cd20324347fa9387dea4779205a5002cb8ce67
-        checksum/secrets: e058c94076dfa20fae8496700837c5e5244f28affb6cda57a3f369c49dad61a7
+        checksum/secrets: e6659caf664ec72a53dc6a6f716a6a26c86b57e9927f0c44ce830cecb2ff4595
         checksum/services: 4b546be00d25ad56b44b4d24cbff97d9830c9d79b2a43912df4e5912c109bf16
         checksum/solr: 29c14feeaddbf7762052db593898d274941f539cee681ddc613957587686f347
       labels:
@@ -86,6 +86,8 @@ spec:
             - name: DISABLE_CSRF_PROTECTION
               value: "true"
             - name: HASHEOUS_API_ENABLED
+              value: "true"
+            - name: HLTB_API_ENABLED
               value: "true"
             - name: IGDB_CLIENT_ID
               valueFrom:
