--- a/manifests/prod/romm/Deployment-romm.yaml
+++ b/manifests/prod/romm/Deployment-romm.yaml
@@ -2,13 +2,13 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: romm-14.23.0
+    app: romm-14.27.4
     app.kubernetes.io/instance: romm
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: romm
-    app.kubernetes.io/version: 4.4.0
+    app.kubernetes.io/version: 4.6.0
     helm-revision: "1"
-    helm.sh/chart: romm-14.23.0
+    helm.sh/chart: romm-14.27.4
     release: romm
   name: romm
   namespace: romm
@@ -27,21 +27,21 @@ spec:
       annotations:
         checksum/cnpg: fc940fff4269c53072f7039f0811133e9b83400670af014010bf50d3f13740f4
         checksum/configmaps: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
-        checksum/mariadb: 689dc46d39c1d9b7b03a50f44b3caa2418a4591fb7e8ca49010ac32de7af00fb
+        checksum/mariadb: 582124f15391d12ea715ee4b5f4f2636d6cde2a96650d4dff21346e846d74246
         checksum/mongodb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
         checksum/persistence: 93f297b2dc801369910048359b61f369b9fa6ef724d690f7364d70cf9aeb0073
-        checksum/redis: c020b37f03f346fb5a179a82d33af745a62f265a95a12e3660cdee8987e15c62
-        checksum/secrets: eeff81f9a8f3c249f8b044e919ea58015ef8819bb63251dd110ab065a2a45ce8
+        checksum/redis: 4d1bb1dd0b5adf09a380822068e73255eb13cb1813e88ae6a4484184bb96ef41
+        checksum/secrets: 82550745319d6cdf16114e85a3908f9de784e083ecc23bb08bee43bc0b87ab76
         checksum/services: 4b546be00d25ad56b44b4d24cbff97d9830c9d79b2a43912df4e5912c109bf16
         checksum/solr: 29c14feeaddbf7762052db593898d274941f539cee681ddc613957587686f347
       labels:
-        app: romm-14.23.0
+        app: romm-14.27.4
         app.kubernetes.io/instance: romm
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/name: romm
-        app.kubernetes.io/version: 4.4.0
+        app.kubernetes.io/version: 4.6.0
         helm-revision: "1"
-        helm.sh/chart: romm-14.23.0
+        helm.sh/chart: romm-14.27.4
         pod.lifecycle: permanent
         pod.name: main
         release: romm
@@ -146,7 +146,7 @@ spec:
               value: /romm
             - name: ROMM_HOST
               value: localhost
-          image: ghcr.io/rommapp/romm:4.4.1
+          image: ghcr.io/rommapp/romm:4.6.1
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 5
@@ -274,7 +274,7 @@ spec:
                   name: romm-mariadbcreds
             - name: MARIADB_ROOT_PASSWORD
               value: PLACEHOLDERROOTPASSWORD
-          image: oci.trueforge.org/tccr/db-wait-mariadb:v1.1.0@sha256:8614f77d546e1f03c5104cf75387eb04efa7cb1ea4557a2d51112f35c69c0905
+          image: oci.trueforge.org/containerforge/mariadb-client:1.1.0@sha256:67e74083d952ab67a31a6adbf43ef429889b9ef084a5583b0c939a892d3b1b9b
           imagePullPolicy: IfNotPresent
           name: romm-system-mariadb-wait
           resources:
@@ -327,7 +327,7 @@ spec:
               do
                 response=$(
                     timeout -s 3 2 \
-                    redis-cli \
+                    valkey-cli \
                       -h "$REDIS_HOST" \
                       -p "$REDIS_PORT" \
                       ping
@@ -363,7 +363,7 @@ spec:
               value: PLACEHOLDERPASSWORD
             - name: REDIS_PORT
               value: "6379"
-          image: oci.trueforge.org/tccr/db-wait-redis:v1.1.0@sha256:ddebe75743f37c431507c51832b5961cc63aa1de61af4f5c75b7554239c8b732
+          image: oci.trueforge.org/containerforge/valkey-tools:1.1.0@sha256:ff58ea59c54d579152516df543f0e4ae42294f05e24d7f4d54f80000085fa571
           imagePullPolicy: IfNotPresent
           name: romm-system-redis-wait
           resources:
