--- a/manifests/prod/apps/Application-nodecast.yaml
+++ b/manifests/prod/apps/Application-nodecast.yaml
@@ -1,15 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: dispatcharr
+  name: nodecast
   namespace: argocd
 spec:
   destination:
-    namespace: dispatcharr
+    namespace: nodecast
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: ./manifests/prod/dispatcharr
+    path: ./manifests/prod/nodecast
     repoURL: https://github.com/devusb/argocd.git
     targetRevision: main
   syncPolicy:
