--- a/manifests/prod/nodecast/PersistentVolumeClaim-nodecast-data.yaml
+++ b/manifests/prod/nodecast/PersistentVolumeClaim-nodecast-data.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: dispatcharr-data
-  namespace: dispatcharr
+  name: nodecast-data
+  namespace: nodecast
 spec:
   accessModes:
     - ReadWriteOnce
